package group_assignment.employee_management.entity;


public enum Role {
  ADMIN,
  EMPLOYEE
}
